fixed bag on mobile

--- a/src/components/SwiperSlider/SwiperSlider.scss
+++ b/src/components/SwiperSlider/SwiperSlider.scss
@@ -19,6 +19,9 @@
 
 .swiper-wrapper {
   max-height: 490px;
+  @media screen and (max-width: 767px) {
+    max-height: 344px;
+  }
 }
 
 .parallax-bg {
